--- a/Notebook/Troubleshooting.tex
+++ b/Notebook/Troubleshooting.tex
@@ -170,25 +170,25 @@ R1(config)# ip sla schedule 1 start-time now life forever
 
 \subsection{Software}
 
-\paragraph{Network management system (NMS)}includes device-level monitoring, configuration, and fault-management tools.  These tools can be used to investigate and correct network problems.
+\paragraph{Network management system (NMS)}includes device-level monitoring, configuration, and \emph{fault-management} tools.  These tools can be used to investigate and correct network problems.
 
-\paragraph{Knowledge base} is a vendor-based webpage that provides information on hardware and software. It contains troubleshooting procedures, implementation guides, and original white papers on most aspects of networking technology.
+\paragraph{Knowledge base} is a \emph{vendor-based webpage} that provides information on hardware and software. It contains troubleshooting procedures, implementation guides, and original white papers on most aspects of networking technology.
 
 \paragraph{Baselining tools}automate  the network documentation and baselining process. For example, they can draw network diagrams, help keep network software and hardware documentation up-to-date, and help to cost-effectively measure baseline network bandwidth use.
 
-\paragraph{Protocol analyzer} useful to investigate packet content while flowing through the network. The information displayed by a protocol analyzer includes the physical, data link, protocol, and descriptions for each frame. Protocol analyzers such as Wireshark can help troubleshoot network performance problems, verify authentication, etc.
+\paragraph{Protocol analyzer} useful to \emph{investigate packet} content while flowing through the network. The information displayed by a protocol analyzer includes the physical, data link, protocol, and descriptions for each frame. Protocol analyzers such as Wireshark can help troubleshoot network performance problems, verify authentication, etc.
 
 \subsection{Hardware}
 
-\paragraph{Digital multimeters (DMMs)}are test instruments that are used to directly measure electrical values of voltage, current, and resistance. We use them to check power supply voltage levels. 
+\paragraph{Digital multimeters (DMMs)}are test instruments that are used to directly measure electrical values of \emph{voltage}, current, and resistance. We use them to check power supply voltage levels. 
 
-\paragraph{Cable testers} are designed for testing data communication cabling. It can be used to detect broken wires, crossed-over wiring, shorted connections, and improperly paired connections. There is one type of cable testers called time-domain reflectometers (TDRs). These devices are used to pinpoint the distance to break in a cable.
+\paragraph{Cable testers} are designed for testing \emph{data communication cabling}. It can be used to detect broken wires, crossed-over wiring, shorted connections, and improperly paired connections. There is one type of cable testers called time-domain reflectometers (TDRs). These devices are used to pinpoint the \emph{distance} to break in a cable.
 
-\paragraph{Cable analyzers} are used to test and certify copper and fiber cables. It can detect near-end crosstalk (NEXT), return loss (RL), etc.
+\paragraph{Cable analyzers} are used to test and \emph{certify} \emph{copper} and \emph{fiber} cables. It can detect near-end \emph{crosstalk} (NEXT), return loss (RL), etc.
 
-\paragraph{Portable network analyzers} are used for troubleshooting VLANs and switched networks. Using this device, the network engineer can view interface details, see which switch port is connected to which device, discover VLAN configuration, analyze network traffic, etc.
+\paragraph{Portable network analyzers} are used for troubleshooting \emph{VLANs} and \emph{switched} networks. Using this device, the network engineer can view interface details, see which switch port is connected to which device, discover VLAN configuration, analyze network traffic, etc.
 
-\paragraph{Network analysis module (NAM)} provides embedded browser-based interface that generates report on the network resources. NAM can also capture and decode packets, track response time, etc.
+\paragraph{Network analysis module (NAM)} provides embedded \emph{browser-based} interface that generates report on the network \emph{resources}.
 
 \section{Symptoms and causes}
 
